--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               <p><strong>Romantique</strong></p>
             </div>
             <div class="filter pets">
-              <i class="rounded fa-solid fa-dog"></i>
+              <i class="rounded fa-solid fa-dog dog"></i>
               <p><strong>Animaux autorisés</strong></p>
             </div>
 
@@ -208,7 +208,7 @@
         <aside>
           <div class="aside_title">
             <h2><strong>Les plus populaires</strong></h2>
-            <i class="fa-solid fa-chart-line fa-2x"></i>
+            <i class="fa-solid fa-star black"></i>
           </div>
 
           <div class="aside_cards">
