adding accessibility for w3c validator

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
       </section>
 
       <section id="flat_anchor" class ="section_2">
+        <h2 class="title_flat">Partie hébergement</h2>
         <article class="flat">
           <h2><strong>Hébergements à Marseille</strong></h2>
 
