linked added for all cards

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <h2><strong>Hébergements à Marseille</strong></h2>
 
           <div class="cards">
-            <a href="#" class="card">
+            <a href="#" class="card linked">
               <div class="card_image">
                 <img src="assets/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge la Cannebière">
               </div>
@@ -214,7 +214,7 @@
 
           <div class="aside_cards">
 
-            <div class="aside_card">
+            <a href="#" class="aside_card">
 
               <div class="aside_card_image">
                 <img src="assets/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel Le Soleil du matin">
@@ -237,8 +237,8 @@
 
 
 
-            </div>
-            <div class="aside_card">
+            </a>
+            <a  href="#" class="aside_card">
 
               <div class="aside_card_image">
                 <img src="assets/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Hôtel Le Soleil du matin">
@@ -260,8 +260,8 @@
 
 
 
-            </div>
-            <div class="aside_card">
+            </a>
+            <a  href="#" class="aside_card">
 
               <div class="aside_card_image">
                 <img src="assets/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel Le Soleil du matin">
@@ -284,7 +284,7 @@
 
 
 
-            </div>
+            </a>
 
           </div>
 
@@ -301,26 +301,26 @@
 
           <div class="activity_cards">
 
-            <div class="card_activity_1">
+            <a href="#" class="card_activity_1">
               <div class="card_activity_1_image">
                 <img src="assets/images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux Port">
               </div>
               <h3>Vieux Port</h3>
-            </div>
+            </a>
 
             <div class="card_activity">
-              <div class="card_activity_2">
+              <a href="#" class="card_activity_2">
                 <div class="card_activity_image">
                   <img src="assets/images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues">
                 </div>
                 <h3>Fort de Pomègues</h3>
-              </div>
-              <div class="card_activity_3">
+              </a>
+              <a href="#" class="card_activity_3">
               <div class="card_activity_image">
                 <img src="assets/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Iles du Frioul">
               </div>
               <h3>Iles du Frioul</h3>
-              </div>
+            </a>
             </div>
 
           </div>
@@ -330,26 +330,26 @@
 
             <div class="activity_cards">
 
-              <div class="card_activity_1">
+              <a href="#" class="card_activity_1">
                 <div class="card_activity_1_image">
                   <img src="assets/images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Parc National des Calanques">
                 </div>
                 <h3>Parc National des Calanques</h3>
-              </div>
+              </a>
 
               <div class="card_activity">
-                <div class="card_activity_3 notre_dame">
+                <a href="#" class="card_activity_3 notre_dame">
                   <div class="card_activity_image">
                     <img src="assets/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde">
                   </div>
                   <h3>Notre-Dame-de-la-Garde</h3>
-                </div>
-                <div class="card_activity_2">
+                </a>
+                <a href="#" class="card_activity_2">
                   <div class="card_activity_image">
                     <img src="assets/images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Parc Longchamp">
                   </div>
                   <h3>Parc Longchamp</h3>
-                </div>
+                </a>
 
               </div>
 
